# mgc_audits_backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celery_worker.py  database.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  todo.md
alembic/: env.py
app/: main.py
app/api/: api_tokens.py  attachments.py  audit_components.py  audit_plans.py  auditor_qualifications.py  audits.py  auth.py  auth_otp.py  change_history.py  dashboard.py  dictionaries.py  enterprises.py  findings.py  integrations.py  notifications.py  reports.py  roles.py  settings.py  telegram.py  users.py  workflow.py
app/core/: base.py  celery_worker.py  config.py  database.py  dependencies.py  security.py
app/crud/: api_token.py  attachment.py  audit.py  audit_calendar.py  audit_component.py  audit_plan.py  audit_schedule_week.py  auditor_qualification.py  change_history.py  dashboard.py  dictionary.py  email_account.py  enterprise.py  export_task.py  finding.py  finding_comment.py  finding_delegation.py  ldap_connection.py  notification.py  registration_invite.py  report.py  role.py  s3_storage.py  status.py  status_transition.py  system_setting.py  user.py
app/models/: __init__.py  api_token.py  attachment.py  audit.py  audit_component.py  audit_plan.py  audit_plan_item.py  audit_schedule_week.py  auditor_qualification.py  change_history.py  dictionary.py  division.py  email_account.py  enterprise.py  (+17 more)
docs/: API.md  DEPLOYMENT.md  INSTALLATION.md
scripts/: init_db.py
tests/: conftest.py
(+38 files in other folders)
